--- a/site/_generated/stories.njk
+++ b/site/_generated/stories.njk
@@ -14,7 +14,7 @@ metadesc: Get the latest news, stories, resource articles, and case studies for 
 <div class="wrapper--hidden-x">
   <!-- Featured Case Story -->
   {% if landingCollections.featured.first %}
-  <div class="wrapper--full-bleed">{{ featuredStory(landingCollections.featured.first , l10n.stories.featured.modifiers) }}</div>
+  <div class="wrapper--full-bleed">{{ featuredStory(landingCollections.featured.landing , l10n.stories.featured.modifiers) }}</div>
   {% endif %}
 
   <!-- Case Studies -->
