--- a/site/_components/stories-section.njk
+++ b/site/_components/stories-section.njk
@@ -5,8 +5,11 @@
     @param {string} subtitle (optional): Text for a subtitle beneath the primary title.
     @param {array} items: List of item objects.
  #}-->
-{% from 'stories-card.njk' import storiesCard %} {% macro storiesSection(titles, items) %} {% for title in titles %}
-<h2 class="item-grid__title type--h2">{{title.title}}</h2>
+{% from 'icon.njk' import icon %} {% from 'stories-card.njk' import storiesCard %} {% macro storiesSection(titles, items) %} {% for title in titles %}
+<header class="item-grid__header">
+  {{ icon(title.tag, 'item-grid__icon') }}
+  <h2 class="item-grid__title type--h2">{{title.title}}</h2>
+</header>
 {% if title.subtitle %}
 <p class="item-grid__subtitle type--large">{{title.subtitle}}</p>
 {% endif %}
