--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -116,7 +116,15 @@
 
   &--stories & {
     &__title {
+      margin-left: 0;
+      margin-right: unset;
+      margin-top: 0.625rem;
       max-width: unset;
+
+      @include mq(430px) {
+        margin-left: 1rem;
+        margin-top: 0;
+      }
     }
 
     &__title,
@@ -126,12 +134,30 @@
 
     &__content {
       gap: 2.5rem 1.25rem;
-      margin-bottom: 1.5rem;
-      margin-top: 1.5rem;
+      margin: clamp(2.5rem, 6vw, 3.5rem) 0;
 
       @include mq(1058px) {
         grid-template-columns: repeat(auto-fill, minmax(pxRem(400px), 1fr));
       }
+    }
+
+    &__header {
+      display: flex;
+      flex-direction: column;
+
+      @include mq(430px) {
+        align-items: center;
+        flex-direction: row;
+      }
+
+      &:not(:first-child) {
+        margin-top: clamp(2.5rem, 6vw, 5rem);
+      }
+    }
+
+    &__icon {
+      height: 2.25rem;
+      width: 2.25rem;
     }
   }
 
